# uaviak-timetable

./: .gitignore  Pipfile  README.md  alembic.ini  cleartmp.sh  config.py  config.simple.py  main.py  pyproject.toml  requirements.txt  rules.py  timetable_text.py  update_timetable.py  utils.py  wsgi.py
.run/: ClearDB.run.xml  ClearTMP.run.xml
alembic/: env.py
alembic/versions/: 12c57a6a3dc2_initial.py
bot/command/: timetable.py
command/: base.py  group_timetable.py  not_found.py  teacher_timetable.py  timetable.py
db/: __init__.py  cache_photo.py  chat.py  group.py  keyvalue.py  notify.py  teacher.py  timetable.py  timetabledb.py  vk_user.py
routes/: call_schedule.py  notify.py  other.py  query_timetable.py
sql_db/: scheme.sql  shema.sql
src/: constants.py  db_connection.py  main.py  utils.py
src/api/: __init__.py  server.py
src/config/: __init__.py  configuration_keeper.py  exceptions.py  types_value.py  сonfiguration.py
src/db/: __init__.py  connection_keeper.py  database.py  timetable_db.py  timetable_sync.py
src/modules/: __init__.py  abstract_module.py  add_timetable.py  add_timetable_module.py  generate_config_module.py  generate_simple_config.py  server_api_modules.py  vk_bot_modues.py
src/parser/: __init__.py  exceptions.py  html_timetable.py  (+1 more)
timetable/: timetable_async.py  timetable_text.py
timetable_bot/: config.py  main.py  update_timetable.py
uaviak_timetable/: exceptions.py  structures.py  utils.py
utils/: __init__.py  env.py  photo_upload.py  photo_uploader.py  text_creater.py  timetablecache.py  types.py  utils.py
vk_bot/: __init__.py  exceptions.py  vk_bot.py
(+211 files in other folders)
