[tool.poetry]
name = "uaviak_timetable"
version = "0.1"
description = ""
authors = ["Gleb Liutsko <gleb290303@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
vkbottle = {url = "https://github.com/timoniq/vkbottle/archive/master.zip"}
asyncpg = "^0.22.0"
aiohttp = "^3.7.4"
beautifulsoup4 = "^4.9.3"
aioresponses = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
