[tool.poetry]
name = "uaviak_timetable"
version = "0.1"
description = ""
authors = ["Gleb Liutsko <gleb290303@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.24.0"
aiohttp = "^3.7.4"
beautifulsoup4 = "^4.10.0"
vkbottle = "^3.0.2"
Pillow = "^8.3.2"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15"
aioresponses = "^0.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
